k8s/bankapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
  namespace: bankapp
  labels:
    app: bankapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      # initContainers:
      # - name: init-container
      #   image: busybox:latest
      #   command: ['sh', '-c', 'echo "This is some content" > /tmp/my-file.txt']
      #   volumeMounts:
      #   - name: hostpath-volume
      #     mountPath: /tmp
      containers:
      - name: bankapp
        # image: docker.io/moazrefat/bankapp:v1
        image: docker.io/moazrefat/bankapp:distroless
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "100m"
            memory: "150Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 8080
        # livenessProbe:
        #   httpGet:
        #     path: /api/version
        #     port: 8080
        # readinessProbe:
        #   httpGet:
        #     path: /api/health
        #     port: 8080
