k8s/bankapp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp
  namespace: bankapp
  labels:
    app: bankapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
    # name: http
  selector:
    app: bankapp
